plang/testing/logs/false-incorrect/94/program94.p.p
d (k (Sl) (B)) J65b T :- jL z (nW (rjN0 (Fa6) rUGI) (PhP1t)) rb3FT (G), gjCXW; n8Rr; sie2Y (av4L (f (pBE) (TLev) O)); sF; m8f Le40O hesJ (Et) (tWqlT (KM) (Jd) (kp4c)), s, oizZ g8h, fR (Kp) (e8Rv (fOwc (O0Cbc) (Ic4) IaBr yf) jpHw (fskLl)); qteGx (y4Sqg (tF Aqh74 (GJjC5) (uX) u3x)) (M) o B5F.

k sg Y.

n2ul VqS kl (W) :- bz (G) (Hm) (mdj YZba4 (S4vt3) CKr M) iMGB.


cgCj (DnDb) wTf (s0j (j EPLWF (n (O) (loT (TRS)) (Sl) (JT0)) (YBi) (CKAO))) (ARWx) :- q (G8Ls) (eLJmy) (b (uT8 vmCz (pDx (L5)) (id))); ((vgFau, m0OC (Ap) (j (oqX (J)) NFHEA (v)) ry6 (XGB4S), (y4jg))).

fHf E0.
y N.

h XxHm gNPk mbO1y KG3Ac :- (l (Tllv); (nZTy), xTxH (TM) (bO dELkE (qI49H (oY3 WDdxO (pYE QHa (Ta) (EUxA)) LA77) (ML6) ZjzoU (qYpZ (YcaGa) qH IHZ)) G (M2Iu2))); xeW (F1Gk0) (dx (X) M (XyG68) Y); cm (YvyGy) OzxM; ((kp8p vw9 (Osty) (P) (ulMKh (AJh) (A) (xc zTp mG)))), (cRfOb; a2Xko (eAOsF eNCzd) (BE8U)).


zYo mXP (dzf VczP (d a3 Xv)) oVaO :- ((j1s (p (h) (hN9 bGP6a (g (Ok) (uCXHH (p8 (fhJ)) (LP) mP1ck (BqqKD))) T)) (pV) pWjEf)), ((n6hCb (K) (M6) xqz); jF, f s2H2W gA h37Y (vas A), oP0dG, w JER (W) GxUkP (w); ud JT (GB)).

k5Ue.


? (((oj8 Zhg mB); z GTxdG J9V7, (u SE; f (WiHv) (UcRh)))).